Fixed horizontal scroll on web and mobile

--- a/css/index.css
+++ b/css/index.css
@@ -88,19 +88,6 @@
     letter-spacing: 0.1em;
 }
 
-.projectBottom{
-    margin-top: 1.56vw;
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x:hidden;
-    width: auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-.projectBottom:hover{
-    overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
-}
 
 .apps{
     margin-right: 1.04vw;
@@ -161,6 +148,21 @@
 
 @media only screen and (min-width: 1020px) {
     
+    
+    .projectBottom{
+        margin-top: 1.56vw;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x:hidden;
+        width: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    .projectBottom:hover{
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    
     .typeInfo:hover > div{
         font-family: montReg;
         cursor: pointer;
@@ -173,6 +175,15 @@
 
 }
 @media only screen and (max-width: 1020px) {
+    
+    .projectBottom{
+        margin-top: 1.56vw;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        width: auto;
+        -webkit-overflow-scrolling: touch;
+    }
     
     .typeInfo:hover > div{
         cursor: pointer;
